<resources>
    <string name="app_name">Coffee Order App</string>
    <string name="order_history">Order History</string>
    <string name="table_number">Table %d</string>
    <string name="table_capacity">Capacity: %d</string>
    <string name="table_status">%s</string>
    <string name="table_amount">Total: %.0f VND</string>
    <string name="table_image_description">Table %d Image</string>
    <string name="pay_time">Paid at: %1$s</string>
    <string name="floor_number">Floor %d</string>
    <string name="receipt_table_number">Table %d Beverages</string>
    <string name="search_box_hint">Search for beverages</string>
    <string name="Order_beverage_title">Name</string>
    <string name="Order_item_price_title">Subtotal</string>
    <string name="Order_quantity_title">Quantity</string>
    <string name="Order_status_title">Status</string>
    <string name="Order_beverage">%s</string>
    <string name="Order_item_price">%.0f VND</string>
    <string name="Order_item_delete">Reduce / Delete</string>
    <string name="Order_quantity">%d</string>
    <string name="Order_status">%s</string>
    <string name="Order_total_price">Total amount: %.0f VND</string>
    <string name="Order_button_text">Mark as Paid</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">Log In</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="forgot_password_text"><u>Forgot password?</u></string>
    <string name="beverage_name">%s</string>
    <string name="beverage_price">%.0f VND</string>
    <string name="Order_item_quantity">Quantity: %d</string>
</resources>