<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/table_item_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/tableImage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/table_image_description"
        android:src="@drawable/table_img_1" />

    <TextView
        android:id="@+id/tableNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text="@string/table_number"
        android:textSize="18sp"
        android:textColor="@color/table_item_text_color"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tableStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:text="@string/table_status"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tableAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:text="@string/table_amount"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>