<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".View.LogInActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/table_item_background"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/logIn_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:textAlignment="center"
                android:textColor="@color/toolbar_color"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="@string/username_hint"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <CheckedTextView
                android:id="@+id/ForgotPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password_text"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/toolbar_color"
                android:text="@string/login_text"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>